added the website

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Document</title>
+    <title>My firstg Github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>this is my website</h1>
+    <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto atque, soluta commodi iusto non earum placeat nostrum cupiditate, animi ad doloribus alias veniam officiis illo repudiandae aliquid incidunt inventore culpa.</p>
+    </div>
+
 </body>
 </html>
